namespace-quota-dockercloud/create-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quota-pod-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: quota-demo
  type: ClusterIP
