namespace-quota-dockercloud/ingress-resources.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /hello-world
          backend:
            serviceName: quota-pod-svc
            servicePort: 80
